<resources>
    <string name="app_name">ExNov25alumnos</string>
    <string name="imagen_de_la_receta">Imagen de la receta</string>
    <string name="nombre_de_la_receta">Nombre de la Receta</string>
    <string name="_45_min">45 min</string>
    <string name="_4_porciones">4 porciones</string>
    <string name="ver_notas">Ver Notas</string>
    <string name="notas">NOTAS</string>
    <string name="texto_de_ejemplo_notas">Texto de ejemplo NOTAS</string>
    <string name="en_caso_de_emergencia_llamar_a_ambulancia">En caso de emergencia llamar a ambulancia</string>
</resources>