<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context="com.dam.exnov25.MainActivity">

    <!-- Atributos de Diseño de la Toolbar-->
    <!--    android:background="#F97316"-->
    <!--    app:titleTextColor="@android:color/white"-->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F97316"
                app:titleTextColor="@android:color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <Spinner
                android:id="@+id/spinnerOpciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>


            <ImageView

                android:id="@+id/img_receta"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/award_meal_24px"
                android:contentDescription="@string/imagen_de_la_receta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txt_nombre_receta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/nombre_de_la_receta"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/txt_tiempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/_45_min"
                        android:textSize="14sp"
                        android:textColor="@android:color/darker_gray"/>


                    <Space
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txt_porciones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/_4_porciones"
                        android:textSize="14sp"
                        android:textColor="@android:color/darker_gray"/>
                </LinearLayout>

                    <Button
                        android:id="@+id/btn_ver_detalle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_notas"
                        android:layout_alignParentStart="true"/>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
